contrast issues

--- a/plugin/highlight/rustconf.css
+++ b/plugin/highlight/rustconf.css
@@ -51,7 +51,7 @@
 .hljs-comment,
 .hljs-quote,
 .hljs-deletion {
-  color: #736d77;
+  color: #948c96;
 }
 
 .hljs-meta {
